# epstein_text_messages

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  build_and_test.sh  check_email_timestamps.py  deploy.sh  diff_2_files.py  diff_gh_pages.sh  epstein_chat_logs_reformatter.py  generate.py  generate_html.py  grep_files.sh  merge_to_gh_pages.sh  open_file_id.sh  pickled_pytest.sh  print_json_files.py  pyproject.toml  search_cleaned_text.py  test_reply_regex.py  test_sent_by_device_regex.py  tester.py
.github/workflows/: python-package.yml
docs/: EFTA01242527.txt  EFTA01242527_phone_calls.html  annotated.html  biographies.html  chronological_emails_epstein_files_nov_2025.html  communication_word_count.html  communication_word_count_epstein_files_nov_2025.html  device_signatures.html  document_notes.html  epstein_emails_word_count.html  epstein_files_nov_2025_cryptadamus_metadata.json  epstein_text_msgs_7th_production_colorized_and_deanonymized.html  file_metadata_epstein_files_nov_2025.json  for_category_crypto.html  for_category_girls.html  for_category_money.html  index.html  json_files_from_epstein_files_nov_2025.json  metadata.json  mobile_chronological.html  most_interesting.html  real_html_document_notes.html  real_html_only_names_ken_starr.html  text_messages_epstein_files_nov_2025.html
documents/: document.py  email.py  email_header.py  epstein_files.py  messenger_log.py
emails_extracted_from_legal_filings/: EFTA02312343_1.txt  HOUSE_OVERSIGHT_011908_1.txt  HOUSE_OVERSIGHT_011908_2.txt  HOUSE_OVERSIGHT_011908_4.txt  HOUSE_OVERSIGHT_011908_5.txt  HOUSE_OVERSIGHT_011908_6.txt  HOUSE_OVERSIGHT_011908_7.txt  HOUSE_OVERSIGHT_012197_1.txt  HOUSE_OVERSIGHT_012197_2.txt  HOUSE_OVERSIGHT_012197_3.txt  HOUSE_OVERSIGHT_012197_4.txt  HOUSE_OVERSIGHT_014797_1.txt  HOUSE_OVERSIGHT_015529_1.txt  HOUSE_OVERSIGHT_016420_1.txt  HOUSE_OVERSIGHT_026624_1.txt
epstein_files/: __init__.py  author.py  count_words.py  epstein_files.py  person.py
epstein_files/documents/: communication.py  communication_document.py  document.py  doj_file.py  email.py  email_header.py  (+6 more)
scripts/: backup_the_epstein_files.sh  build_pages.sh  check_email_timestamps.py  check_reply_regex_results.py  check_sent_by_device_regex.py  collect_and_print_contact_infos.py  copy_extracted_emails.py  count_json_keys.py  count_words.py  create_sample_html.py  diff_2_files.py  diff_gh_pages.sh  dilorio_email_extract.py  download_pdf.py  dropsite_extraction.py  dump_all_files.py  dump_email_timestamps.py  epstein_files  extract_doj_pdfs.py  find_source_files.sh  generate_LINE_REPAIR_MERGES.py  git_commit_with_changelog.sh  grep_files.sh  make_clean.py  open_file_id.sh  phone_number_count.py  print_interesting_files.py  print_json_files.py  research_data_phone_scan.py  russian_ocr.sh  search_cleaned_text.py  sent_from_device_check.py  show_file_contents.py  show_files.py  suggest_email_dupes.py  test_reply_regex.py  test_sent_by_device_regex.py  update_file_fixtures.py  update_fixture_csv.py  use_pickled.py  (+1 more)
tests/: conftest.py  test_config.py  test_emails.py  test_epstein_files.py  test_highlighted_group.py  test_messenger_logs.py  test_other_files.py  test_person.py
util/: constants.py  data.py  email_header.py  emails.py  env.py  file_helper.py  highlighted_group.py  html.py  rich.py  strings.py  text_highlighter.py
(+177 files in other folders)
