[tool.poetry]
name = "epstein-files"
version = "1.0.0"
description = "Tools for working with the Jeffrey Epstein documents released in November 2025."
authors = ["Michel de Cryptadamus"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
inflection = "^0.5.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.1"
rich = "^14.2.0"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
bpython = "^0.26"
pytest = "^9.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-vv"]
pythonpath = ["."]
