[tool.poetry]
name = "epstein-files"
version = "1.0.1"
description = "Tools for working with the Jeffrey Epstein documents released in November 2025."
authors = ["Michel de Cryptadamus"]
readme = "README.md"
license = "GPL-3.0-or-later"

homepage = "https://michelcrypt4d4mus.github.io/epstein_text_messages/"

keywords = [
    "Epstein",
    "Jeffrey Epstein",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[tool.poetry.dependencies]
python = "^3.11"
datefinder = "^0.7.3"
inflection = "^0.5.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
rich = "^14.2.0"


[tool.poetry.group.dev.dependencies]
bpython = "^0.26"
pytest = "^9.0.1"


[tool.poetry.scripts]
epstein_diff = 'epstein_files:epstein_diff'
epstein_dump_urls = 'epstein_files:epstein_dump_urls'
epstein_generate = 'epstein_files:generate_html'
epstein_search = 'epstein_files:epstein_search'
epstein_show = 'epstein_files:epstein_show'


[tool.poetry.urls]
Emails = "https://michelcrypt4d4mus.github.io/epstein_emails_house_oversight/"
Metadata = "https://michelcrypt4d4mus.github.io/epstein_text_messages/epstein_files_nov_2025_cryptadamus_metadata.json"
Texts = "https://michelcrypt4d4mus.github.io/epstein_text_messages/"
WordCount = "https://michelcrypt4d4mus.github.io/epstein_text_messages/epstein_emails_word_count.html"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-vv"]
pythonpath = ["."]
